# tep-ihm

./: .gitignore  Dockerfile  README.md  pyproject.toml
proto/tep/v1/: plant.proto
src/: server.py
static/: app.js  index.html  style.css
